# SLAU

CSR_matrix/: CMakeLists.txt
CSR_matrix/src/: Lil_matrix.hpp
Dense_matrix/tests/: test_dense_matrix.cpp
Operation_with_vectors_and_matrix/: CMakeLists.txt
Operation_with_vectors_and_matrix/src/: Multiplying_from_a_matrix_by_a_vector.hpp  operation.hpp
The_householder_algorithm/: CMakeLists.txt
The_run-through_method/: main.cpp  solver.cpp  solver.hpp
ДЗ_1/The_run-through_method/: CMakeLists.txt
ДЗ_2/CSR_matrix/tests/: test_lil_matrix.cpp
ДЗ_2/Dense_matrix/: CMakeLists.txt
ДЗ_2/Dense_matrix/src/: dense_matrix.hpp
ДЗ_2/Operation_with_vectors_and_matrix/tests/: tests.cpp
ДЗ_3/The_householder_algorithm/src/: householder_algorithm.hpp
ДЗ_3/The_householder_algorithm/test/: main.cpp
